--- a/iOSLocalizeOC/iOSLocalizeOC/ar.lproj/LanguageSettingController.strings
+++ b/iOSLocalizeOC/iOSLocalizeOC/ar.lproj/LanguageSettingController.strings
@@ -7,3 +7,23 @@
 
 /* Class = "UIButton"; normalTitle = "阿拉伯语"; ObjectID = "iqs-2J-Xqg"; */
 "iqs-2J-Xqg.normalTitle" = "العربية";
+
+//##################################################################################
+//#           AutoGenStrings            2019-01-29 11:11:25
+//##################################################################################
+
+/* Class = "UILabel"; text = "Label"; ObjectID = "Z3B-uZ-Udc"; */
+"Z3B-uZ-Udc.text" = "Label";
+
+//##################################################################################
+//#           AutoGenStrings            2019-01-29 11:11:59
+//##################################################################################
+
+
+//"kY8-qq-oej.segmentTitles[0]" = "First";
+
+
+//"kY8-qq-oej.segmentTitles[1]" = "Second";
+
+/* Class = "UIButton"; normalTitle = "Button"; ObjectID = "JPm-Nt-QIV"; */
+"JPm-Nt-QIV.normalTitle" = "Button";
